--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ ul li a{
   text-decoration: none;
   color: black;
   font-size: smaller;
-  
+  font-weight: 600;
 }
 .main{
   background-image: url("images/IMG_1126.jpg");
